# testing-c

./: .gitignore  .rspec  Cargo.toml  Makefile  README.md  build.rs  build.zig  build.zig.zon  dub.sdl  go.mod  mise.toml  pyproject.toml  rebar.config  testing-c.asd  testing-c.cabal  testing_c.nimble
c/: lib.c  lib.h
d/: test.d
erlang/: c.erl  prop_c.erl  test.erl  testing_c.app.src
erlang/c_src/: erl_nif.c
go/: test.go  test_test.go
haskell/: Test.hs
lisp/: test.lisp
nim/: config.nims  test.nim
python/: test_c.py
ruby/: test.rb
rust/: test.rs
zig/: test.zig
