cabal-version:      3.0
name:               testing-c
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

build-type:         Simple

common warnings
    ghc-options: -Wall

test-suite testing-c-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   haskell
    main-is:          Test.hs

    c-sources:        c/lib.c
    include-dirs:     c

    build-depends:    base ^>=4.18.3.0
